# gatherspecimens

./: .gitignore  README.md  WIZARDS.md  celeryconfig.py.example  celerygatherer.py  celeryworker.py  lint  pyproject.toml
.github/workflows/: ci.yml
src/gatherspecimens/: __init__.py  cdxrecords.py  counter.py  schema.py  utils.py
tests/: conftest.py  extract_test_rows.py  test_extracted_data.py  testrows.yml
tests/test_data/: 1082141.yml  1154962.yml  1175908.yml  1198744.yml  1242049.yml  1260275.yml  1882515.yml  1916786.yml  1947266.yml  194991.yml  1978856.yml  2020967.yml  2065415.yml  224855.yml  230282.yml  291468.yml  310651.yml  334750.yml  384603.yml  393804.yml  612668.yml  635082.yml  704844.yml  717857.yml  782245.yml  786541.yml  795280.yml  834579.yml  875054.yml  896711.yml  931241.yml
